# sentryiq

./: .env.example  .gitignore  CLAUDE.md  CLINE_INSTRUCTIONS.md  DOCKER.md  README.md  SENTRYIQ.md  docker-compose.yml  pytest.ini
.github/: copilot-instructions.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  init.sql  main.py  pyproject.toml  requirements.txt
backend/ai/: __init__.py  nim_client.py  schemas.py
backend/api/: __init__.py  intelligence_routes.py  sandbox_routes.py  simulation_routes.py
backend/database/: __init__.py  connection.py  models.py
backend/ingestion/: __init__.py  config.py  epss_worker.py  kev_worker.py  nvd_worker.py
backend/intelligence/: __init__.py  chain_detector.py  prioritizer.py  stack_matcher.py
backend/sandbox/: __init__.py  monitor.py  nemoclaw.py  nim_sandboxed.py  policies.py
backend/simulation/: __init__.py  phishing.py  scoring.py
backend/src/sentryiq_api/: __init__.py  main.py  models.py  routes.py  services.py
backend/tests/: test_api.py
data/cwe_graph/: __init__.py  prerequisites.py
docs/: project-brief.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.d.ts  tailwind.config.js  tailwind.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/components/: Header.tsx  MetricCard.tsx  Sidebar.tsx  StatusChip.tsx
frontend/src/lib/: api.ts  demoData.ts
frontend/src/pages/: ChainsPage.tsx  CompliancePage.tsx  DashboardPage.tsx  HumanRiskPage.tsx  StacksPage.tsx  (+3 more)
tests/: README.md  __init__.py  conftest.py  test_api_integration.py  test_chain_detector.py  test_phishing_engine.py  test_prioritizer.py  test_risk_scoring.py  test_sandbox.py
(+1 files in other folders)
