[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentryiq-api"
version = "0.1.0"
description = "FastAPI backend for the SentryIQ MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "httpx>=0.27,<1.0",
  "python-multipart>=0.0.9,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "aiosqlite>=0.19,<1.0",
  "asyncpg>=0.29,<1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "pytest-cov>=4.1,<5.0",
  "pytest-xdist>=3.5,<4.0",
  "black>=24.0,<25.0",
  "ruff>=0.2,<1.0",
  "mypy>=1.8,<2.0",
  "types-setuptools>=69.0,<70.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
  "unit: unit tests",
  "integration: integration tests",
  "asyncio: async tests",
  "sandbox: sandbox tests"
]
addopts = "--strict-markers --tb=short -ra"
log_cli = false
log_cli_level = "INFO"
junit_family = "xunit2"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "C", "B", "PIE"]
ignore = ["E501", "W503"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
